deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: first-app
  template:
    metadata:
      labels:
        app: first-app
    spec:
      containers:
      - name: first-app
        image: swaranjal/swara:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
