Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: swaranjal-djangoapp.com
    http: 
      paths:
        - path: /    
          pathType: Prefix
          backend:
            service:
              name: service
              port:
                number: 80
